# XBraidForUG4

./: .gitmodules  CMakeLists.txt  README.md
bridge/: bridge.cpp  transfer.cpp
config/: compile_settings.hpp  execution_settings.hpp  pragma.hpp
convergence/: adaptive_conv_check.hpp  fine_coarse_conv_check.hpp  simple_conv_check.hpp  spatial_accuracy.hpp
core/: braid_executor.hpp  braid_settings.hpp  braid_vector_struct.hpp  discard_standard_stream.hpp  replace_standard_stream.hpp  space_time_communicator.hpp
driver/: basic_driver.hpp  braid_integrator.hpp  braid_integrator_factory.hpp  braid_residual_stepper.hpp  braid_theta_integrator_nonlinear.hpp  gridfunction_base.hpp  script_writer_driver.hpp
factory/: bdf_integrator_factory.hpp  const_step_linear_time_integrator_factory.hpp  fixed_step_theta_integrator_factory.hpp  limex_integrator_factory.hpp  linear_time_integrator_factory.hpp  simple_integrator_factory.hpp  theta_integrator_factory.hpp
initializer/: lua_initializer.hpp  random_value_initializer.hpp  start_value_initializer.hpp  zero_Initializer.hpp
integrator/: bdf_integrator.hpp  bdf_integrator_nl.hpp  experimental_timestep.hpp  theta_conststep_integrator.hpp  theta_conststep_integrator_nl.hpp  theta_integrator.hpp  theta_integrator_nl.hpp  theta_single_timestep.hpp
interface/: initializer.hpp  integrator_factory.hpp  observer_xbraid.hpp  prolongate.hpp  residual_timeintegrator.hpp  restrict.hpp  spatial_norm.hpp
lua/: bridge_executor.lua  bridge_factory.lua  bridge_initializer.lua  bridge_methods.lua  bridge_observer.lua  bridge_other.lua  bridge_solver.lua  header.hpp  lua-include.lua  stage.lua  util_integrator.lua  util_xbraid.lua
lua/junk_subfolder/: lua-include.lua  poroelasticity.lua
math/: vector.hpp
observer/: collector_observer.hpp  io_observer.hpp  io_process_observer.hpp  matlab_observer.hpp  no_observer.hpp  userdata_process_evaluate_observer.hpp  vtk_observer.hpp  vtk_process_observer.hpp  xb_collector_observer.hpp
problemset/: problemsets.hpp
problemset/heatequation/: braid_heat_check.hpp
problemset/poroelasticity/: biot_braid_displacement_norm.hpp  biot_error_data.hpp  braid_biot_control.hpp  braid_biot_estimator.hpp  braid_biot_precomputed.hpp  bridge.hpp
spatial_norm/: euclidian_norm.hpp
src/: xbraidforug4_plugin.cpp
src/common/: XObject.h  pragma.h
src/core/: braid_executor.h  braid_settings.h  braid_vector_struct.h  replace_standard_stream.h  space_time_communicator.h
src/driver/: basic_driver.h  braid_integrator.h  braid_integrator_factory.h  braid_residual_stepper.h  braid_theta_integrator_nonlinear.h  gridfunction_base.h
src/factory/: bdf_integrator_factory.h  const_step_linear_time_integrator_factory.h  fixed_step_theta_integrator_factory.h  limex_integrator_factory.h  linear_time_integrator_factory.h  simple_integrator_factory.h  theta_integrator_factory.h
src/initializer/: start_value_initializer.h  zero_Initializer.h
src/integrator/: bdf_integrator.h  bdf_integrator_nl.h  theta_conststep_integrator.h  theta_conststep_integrator_nl.h  theta_integrator.h  theta_integrator_nl.h  theta_single_timestep.h
src/interface/: initializer.h  integrator_factory.h  observer_xbraid.h  residual_timeintegrator.h  spatial_norm.h
src/observer/: collector_observer.h  io_observer.h  io_process_observer.h  matlab_observer.h  mock_observer.h  userdata_process_evaluate_observer.h  vtk_observer.h  vtk_process_observer.h  xb_collector_observer.h
src/spatial_norm/: euclidian_norm.h
src/util/: braid_timer.h  braid_usage_timer.h  io_gridfunction.h  memory_observer.cpp  memory_observer.h  parallel_io_gridfunction.h  parallel_logger.h  world_memory.cpp  world_memory.h
tests/: class_reusage.cpp  class_reusage.hpp
transfer/: __package.hpp  prolongate.hpp  prolongate_elementwise.hpp  prolongate_p1.hpp  real_coarsen.hpp  restrict.hpp  restrict_elementwise.hpp  restrict_p1.hpp  spatial_grid_transfer.hpp
util/: braid_timer.hpp  braid_usage_timer.hpp  debug.hpp  io_gridfunction.hpp  memory_observer.cpp  memory_observer.hpp  parallel_io_gridfunction.hpp  parallel_logger.hpp  pragma.hpp  world_memory.cpp  world_memory.hpp
